Bluewolf SFMTA/src/objects/Application_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Attachments</relationshipLabel>
        <relationshipName>Application_Attachments1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <formula>TEXT(Document__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>TEXT(Document__r.Document_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Application Attachments</relationshipLabel>
        <relationshipName>Application_Attachments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Attachment</label>
    <nameField>
        <label>Application Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>